# syncopate

./: .gitignore  .pre-commit-config.yaml  Justfile  Makefile  README.md  pyproject.toml  ruff.toml
docs/: Examples.md  conf.py  index.rst
examples/: fastapi_example.py  full.py  starlette_example.py
src/syncopate/: __init__.py
src/syncopate/framework/: app.py  requests.py  responses.py  routing.py
src/syncopate/loop/: __init__.py
src/syncopate/loop/events/: scheduler.py
src/syncopate/server/: common.py  cycle.py  protocol.py  server.py
syncopate/: __init__.py  events.py  logging.py  main.py  server.py
syncopate/core/: __init__.py  events.py  server.py
syncopate/framework/: __init__.py  app.py  background.py  responses.py  routing.py
syncopate/loop/: __init__.py  events.py  exceptions.py  futures.py  locks.py  streams.py  tasks.py  threading.py  threading_test.py
syncopate/loop/events/: __init__.py  scheduler.py  server.py
syncopate/server/: __init__.py  common.py  cycle.py  h11.py  helpers.py  protocol.py  server.py
tests/: app.py  collection.json  run.sh  suite.hurl  test_e2e.py  test_events.py
tests/loop/: test_events.py
