[project]
name = "syncopate"
version = "0.1.0"
description = "An experimental ASGI framework built from the ground up."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typing-extensions>=4.14.1",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "debugpy>=1.8.14",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
]
docs = [
    "sphinx>=8.2.3",
]

[tool.coverage.run]
omit = [
    "examples/*",
    "tests/*",
]
