[project]
name = "syncopate-runtime"
version = "0.1.0"
description = "An experimental ASGI runtime built from the ground up."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv-build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "debugpy>=1.8.14",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
]

[tool.uv.build-backend]
module-name = "syncopate"
module-root = "src"

[tool.coverage.run]
include = [
    "src/*"
]
